<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <data>

        <variable
            name="handlers"
            type="com.spundev.bakingtime.adapter.IngredientsAdapter.IngredientsTutorialViewHolder.IngredientsTutorialHandlers" />

    </data>

    <android.support.v7.widget.CardView
        style="@style/MyCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ingredient_item_checkbox_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/ingredient_item_card_padding"
                android:text="@string/ingredients_info_card_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/ingredient_item_card_padding"
                android:text="@string/ingredients_info_card_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/white" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:onClick="@{handlers::onClickClose}"
                android:text="@string/ingredients_info_card_action_button" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</layout>